# experiments

./: .gitignore  README.md  array.cpp  atomic_counter.cpp  bcd_converter.cpp  buffer_overflow.cpp  env_var.cpp  folds.hs  foobar-1.cpp  increment.cpp  increment.py  macros.cpp  mutex_counter.cpp  opencv_build_information.cpp  opencv_test.cpp  opencv_version.cpp  padding.cpp  reverse_ranged_for.cpp  rotate.cpp  round.cpp  rule_of_five.cpp  rvo.cpp  size.cpp  sprintf.cpp  template_lists.cpp  template_parameter_deduction.cpp  unique.cpp
cp/: cp.cpp
cp/rust_cp/: Cargo.toml
cp/rust_cp/src/: main.rs
cpp_vs_rust_borrows_and_moves/: safe.rs  unsafe.cpp
notes/: notes.py
notes/notes_rust/: Cargo.toml
notes/notes_rust/src/: main.rs
stdin_hello_world/: cpp_binary  readme.txt  rust_binary_dynamically_linked  rust_binary_statically_linked  stdin_hello_world.cpp  stdin_hello_world.py  stdin_hello_world.rs
stdin_read_number/: std_read_number.cpp  std_read_number.rs
